added speed up/down buttons

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
 <body onLoad = initialize() bgcolor="#C0D0D6">	
 	<div id="canvas_div" style="position:relative; width:640px; height:480px;float:left;">
+		<button onclick="decreaseStep()">-</button>
+		<button onclick="increaseStep()">+</button><p>
 		<canvas id="canvas" width="1600" height="900" style="border:1px solid #d3d3d3;">
 			Your browser does not support the canvas element.
 		</canvas>
